# mlops-project

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  implementation_plan.md  params.ci.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cd.yaml  ci.yaml  ct.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: model_config.yaml
data/raw/: .gitignore  test.csv.dvc  test_v1.csv.dvc  train.csv.dvc  train_v1.csv.dvc
data/sample/: sample_test.csv  sample_train.csv
deployment/k8s/: deployment.yaml  monitoring-cronjob.yaml  pod-monitoring.yaml  sa.yaml  service.yaml
deployment/k8s/grafana/: grafana-sa.yaml  grafana-values.yaml
deployment/mlflow/: docker-compose.yaml
deployment/monitoring/: docker-compose.yaml
deployment/monitoring/alertmanager/: alertmanager.yml
deployment/monitoring/grafana/provisioning/dashboards/: dashboard.yml  fraud_detection.json
deployment/monitoring/prometheus/: alerts.yml  prometheus.yml
models/artifacts/: label_encoders.pkl
models/trained/: fe_params.pkl  model_columns.pkl  trained_model.pkl  trained_model_meta.json
notebooks/: EDA.ipynb  FeatureEngineering.ipynb  Modeling.ipynb
reports/training/: baseline_leaderboard.csv  best_model.json
reports_monitoring/: drift_report.html
src/api/: FeatureEngineering.py  drift.py  evaluate.py  feedback_store.py  inference.py  logger.py  main.py  metrics.py  prediction_store.py  requirement.txt  retraining_trigger.py  schemas.py  tune_model.py
src/data/: get_data_v1.py
src/features/: FeatureEngineering.py  engineering.py
src/mlops_project/: get_data_v1.py
src/model/: train_models.py  tune_model.py
src/monitoring/: metrics.py  report_store.py  run_drift_report.py
src/streamlit/: app.py  web.py
src/streamlit/css/: panel.py  sidebar.py  theme.py  tx_form.py
