[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bvh", email = "huybv.ynm.neu@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "awscli>=1.44.74",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "gdown>=5.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]

[project.scripts]
mlops-project = "mlops_project:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
