[project]
name = "mlops-project"
version = "0.1.0"
description = "MLOps project for fraud detection"
readme = "README.md"
authors = [
    { name = "bvh", email = "huybv.ynm.neu@gmail.com" }
]

requires-python = ">=3.11,<3.14"

dependencies = [
    "awscli>=1.44.74",
    "catboost>=1.2,<2",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "gdown>=5.2.1",
    "imbalanced-learn>=0.12,<1",
    "ipykernel>=7.2.0",
    "joblib>=1.4,<2",
    "lightgbm>=4.0,<5",
    "matplotlib>=3.8,<4",
    "mlflow==3.11.1",
    "numpy>=1.26,<3",
    "optuna>=3.6,<5",
    "pandas>=2.2,<3",
    "pyarrow>=15,<22",
    "pyyaml>=6,<7",
    "scikit-learn>=1.5,<2",
    "seaborn>=0.13.2",
    "xgboost>=2.0,<4",
]

[project.scripts]
mlops-project = "mlops_project:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"