[project]
name = "mlops-project"
version = "0.1.0"
description = "MLOps project for fraud detection"
readme = "README.md"
authors = [
    { name = "bvh", email = "huybv.ynm.neu@gmail.com" }
]

requires-python = ">=3.11,<3.14"

# fastapi, 

dependencies = [
    "awscli>=1.44.74",
    "boto3",
    "catboost>=1.2,<2",
    "db-dtypes>=1.5.1",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "evidently>=0.4,<0.5",
    "fastapi==0.135.3",
    "gdown>=5.2.1",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "httpx>=0.27,<1",
    "imbalanced-learn>=0.12,<1",
    "ipykernel>=7.2.0",
    "joblib>=1.4,<2",
    "lightgbm>=4.0,<5",
    "matplotlib>=3.8,<4",
    "mlflow==3.11.1",
    "numpy>=1.26,<3",
    "optuna>=3.6,<5",
    "pandas>=2.2,<3",
    "prometheus-client>=0.20,<1",
    "prometheus-fastapi-instrumentator>=7,<8",
    "pyarrow>=15,<22",
    "pydantic==2.13.0",
    "python-json-logger>=4.1.0",
    "pyyaml>=6,<7",
    "scikit-learn>=1.5,<2",
    "seaborn>=0.13.2",
    "uvicorn==0.44.0",
    "xgboost>=2.0,<4",
]

[project.scripts]
mlops-project = "mlops_project:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = false
